eclipse/megal/src/main/java/megal/parser/MegaLParser.java
// Generated from MegaL.g4 by ANTLR 4.0

package megal.parser;

import megal.*;
import megal.model.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MegaLParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__16=1, T__15=2, T__14=3, T__13=4, T__12=5, T__11=6, T__10=7, T__9=8, 
		T__8=9, T__7=10, T__6=11, T__5=12, T__4=13, T__3=14, T__2=15, T__1=16, 
		T__0=17, ID=18, NEWLINE=19, STRING=20, WS=21, COMMENT=22;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'->'", "')'", "'extern'", "'.'", "'+'", "'['", "'*'", 
		"'('", "':'", "'@'", "'<'", "'?'", "'#'", "'intern'", "'|'", "'!'", "ID", 
		"NEWLINE", "STRING", "WS", "COMMENT"
	};
	public static final int
		RULE_model = 0, RULE_decl = 1, RULE_edecl = 2, RULE_rdecl = 3, RULE_annotation = 4, 
		RULE_modifier = 5, RULE_etype = 6, RULE_genericarguments = 7, RULE_funappdecl = 8, 
		RULE_ename = 9, RULE_rname = 10, RULE_id = 11, RULE_etypename = 12, RULE_uqref = 13, 
		RULE_parent = 14, RULE_etypedecl = 15, RULE_rtypedecl = 16, RULE_dot = 17;
	public static final String[] ruleNames = {
		"model", "decl", "edecl", "rdecl", "annotation", "modifier", "etype", 
		"genericarguments", "funappdecl", "ename", "rname", "id", "etypename", 
		"uqref", "parent", "etypedecl", "rtypedecl", "dot"
	};

	@Override
	public String getGrammarFileName() { return "MegaL.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


		public Model root;

	public MegaLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public DeclContext decl;
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitModel(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 13) | (1L << 15) | (1L << 17) | (1L << ID))) != 0)) {
				{
				{
				setState(36); ((ModelContext)_localctx).decl = decl();
				 root.getDecls().add(((ModelContext)_localctx).decl.d); 
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Decl d;
		public EdeclContext edecl;
		public RdeclContext rdecl;
		public EtypedeclContext etypedecl;
		public RtypedeclContext rtypedecl;
		public FunappdeclContext funappdecl;
		public EdeclContext edecl() {
			return getRuleContext(EdeclContext.class,0);
		}
		public RtypedeclContext rtypedecl() {
			return getRuleContext(RtypedeclContext.class,0);
		}
		public RdeclContext rdecl() {
			return getRuleContext(RdeclContext.class,0);
		}
		public FunappdeclContext funappdecl() {
			return getRuleContext(FunappdeclContext.class,0);
		}
		public EtypedeclContext etypedecl() {
			return getRuleContext(EtypedeclContext.class,0);
		}
		public DotContext dot() {
			return getRuleContext(DotContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(44); ((DeclContext)_localctx).edecl = edecl();
				 ((DeclContext)_localctx).d =  ((DeclContext)_localctx).edecl.d; 
				}
				break;

			case 2:
				{
				setState(47); ((DeclContext)_localctx).rdecl = rdecl();
				 ((DeclContext)_localctx).d =  ((DeclContext)_localctx).rdecl.d; 
				}
				break;

			case 3:
				{
				setState(50); ((DeclContext)_localctx).etypedecl = etypedecl();
				 ((DeclContext)_localctx).d =  ((DeclContext)_localctx).etypedecl.d; 
				}
				break;

			case 4:
				{
				setState(53); ((DeclContext)_localctx).rtypedecl = rtypedecl();
				 ((DeclContext)_localctx).d =  ((DeclContext)_localctx).rtypedecl.d; 
				}
				break;

			case 5:
				{
				setState(56); ((DeclContext)_localctx).funappdecl = funappdecl();
				 ((DeclContext)_localctx).d =  ((DeclContext)_localctx).funappdecl.d; 
				}
				break;
			}
			setState(61); dot();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdeclContext extends ParserRuleContext {
		public EDecl d;
		public ModifierContext modifier;
		public EnameContext ename;
		public UqrefContext uqref;
		public ParentContext parent;
		public EtypeContext etype;
		public ModifierContext modifier() {
			return getRuleContext(ModifierContext.class,0);
		}
		public UqrefContext uqref() {
			return getRuleContext(UqrefContext.class,0);
		}
		public EnameContext ename() {
			return getRuleContext(EnameContext.class,0);
		}
		public ParentContext parent() {
			return getRuleContext(ParentContext.class,0);
		}
		public EtypeContext etype() {
			return getRuleContext(EtypeContext.class,0);
		}
		public EdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterEdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitEdecl(this);
		}
	}

	public final EdeclContext edecl() throws RecognitionException {
		EdeclContext _localctx = new EdeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_edecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Modifier m = null; 
			setState(67);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 13) | (1L << 15) | (1L << 17))) != 0)) {
				{
				setState(64); ((EdeclContext)_localctx).modifier = modifier();
				 m = ((EdeclContext)_localctx).modifier.m; 
				}
			}

			setState(69); ((EdeclContext)_localctx).ename = ename();
			setState(70); ((EdeclContext)_localctx).uqref = uqref();
			setState(71); ((EdeclContext)_localctx).parent = parent();
			setState(72); match(10);
			setState(73); ((EdeclContext)_localctx).etype = etype();
			 ((EdeclContext)_localctx).d =  new EDecl(m, ((EdeclContext)_localctx).etype.t, ((EdeclContext)_localctx).ename.n, ((EdeclContext)_localctx).uqref.s, ((EdeclContext)_localctx).parent.n); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RdeclContext extends ParserRuleContext {
		public RDecl d;
		public EnameContext left;
		public RnameContext rname;
		public EnameContext right;
		public AnnotationContext ann;
		public AnnotationContext annotation() {
			return getRuleContext(AnnotationContext.class,0);
		}
		public List<EnameContext> ename() {
			return getRuleContexts(EnameContext.class);
		}
		public RnameContext rname() {
			return getRuleContext(RnameContext.class,0);
		}
		public EnameContext ename(int i) {
			return getRuleContext(EnameContext.class,i);
		}
		public RdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterRdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitRdecl(this);
		}
	}

	public final RdeclContext rdecl() throws RecognitionException {
		RdeclContext _localctx = new RdeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); ((RdeclContext)_localctx).left = ename();
			setState(77); ((RdeclContext)_localctx).rname = rname();
			setState(78); ((RdeclContext)_localctx).right = ename();
			setState(79); ((RdeclContext)_localctx).ann = annotation();
			 ((RdeclContext)_localctx).d =  new RDecl(((RdeclContext)_localctx).rname.n, ((RdeclContext)_localctx).left.n, ((RdeclContext)_localctx).right.n, ((RdeclContext)_localctx).ann.s); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationContext extends ParserRuleContext {
		public String s;
		public EnameContext ename;
		public EnameContext ename() {
			return getRuleContext(EnameContext.class,0);
		}
		public AnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterAnnotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitAnnotation(this);
		}
	}

	public final AnnotationContext annotation() throws RecognitionException {
		AnnotationContext _localctx = new AnnotationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_annotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((AnnotationContext)_localctx).s =  null; 
			setState(87);
			_la = _input.LA(1);
			if (_la==14) {
				{
				setState(83); match(14);
				setState(84); ((AnnotationContext)_localctx).ename = ename();
				 ((AnnotationContext)_localctx).s =  ((AnnotationContext)_localctx).ename.n; 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifierContext extends ParserRuleContext {
		public Modifier m;
		public ModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitModifier(this);
		}
	}

	public final ModifierContext modifier() throws RecognitionException {
		ModifierContext _localctx = new ModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_modifier);
		try {
			setState(97);
			switch (_input.LA(1)) {
			case 4:
				enterOuterAlt(_localctx, 1);
				{
				setState(89); match(4);
				 ((ModifierContext)_localctx).m =  Modifier.Extern; 
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 2);
				{
				setState(91); match(15);
				 ((ModifierContext)_localctx).m =  Modifier.Intern; 
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 3);
				{
				setState(93); match(13);
				 ((ModifierContext)_localctx).m =  Modifier.Parameter; 
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 4);
				{
				setState(95); match(17);
				 ((ModifierContext)_localctx).m =  Modifier.Dependent; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtypeContext extends ParserRuleContext {
		public EType t;
		public EtypenameContext etypename;
		public GenericargumentsContext genericarguments;
		public EtypenameContext etypename() {
			return getRuleContext(EtypenameContext.class,0);
		}
		public GenericargumentsContext genericarguments() {
			return getRuleContext(GenericargumentsContext.class,0);
		}
		public EtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterEtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitEtype(this);
		}
	}

	public final EtypeContext etype() throws RecognitionException {
		EtypeContext _localctx = new EtypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_etype);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 EType.Cardinality c = EType.Cardinality.None; 
			setState(100); ((EtypeContext)_localctx).etypename = etypename();
			setState(101); ((EtypeContext)_localctx).genericarguments = genericarguments();
			setState(106);
			switch (_input.LA(1)) {
			case 6:
				{
				setState(102); match(6);
				 c = EType.Cardinality.Plus; 
				}
				break;
			case 8:
				{
				setState(104); match(8);
				 c = EType.Cardinality.Star; 
				}
				break;
			case NEWLINE:
				break;
			default:
				throw new NoViableAltException(this);
			}
			 ((EtypeContext)_localctx).t =  new EType(((EtypeContext)_localctx).etypename.n, c, ((EtypeContext)_localctx).genericarguments.g); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenericargumentsContext extends ParserRuleContext {
		public GenericArguments g;
		public EtypenameContext etypename;
		public EtypenameContext etypename(int i) {
			return getRuleContext(EtypenameContext.class,i);
		}
		public List<EtypenameContext> etypename() {
			return getRuleContexts(EtypenameContext.class);
		}
		public GenericargumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericarguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterGenericarguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitGenericarguments(this);
		}
	}

	public final GenericargumentsContext genericarguments() throws RecognitionException {
		GenericargumentsContext _localctx = new GenericargumentsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_genericarguments);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((GenericargumentsContext)_localctx).g =  null; String left = null; String right = null; 
			setState(119);
			_la = _input.LA(1);
			if (_la==7) {
				{
				setState(111); match(7);
				setState(112); ((GenericargumentsContext)_localctx).etypename = etypename();
				left = ((GenericargumentsContext)_localctx).etypename.n; 
				setState(114); match(2);
				setState(115); ((GenericargumentsContext)_localctx).etypename = etypename();
				right = ((GenericargumentsContext)_localctx).etypename.n; 
				setState(117); match(1);
				}
			}

			 ((GenericargumentsContext)_localctx).g =  new GenericArguments(left, right); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunappdeclContext extends ParserRuleContext {
		public FunAppDecl d;
		public EnameContext ename;
		public List<EnameContext> ename() {
			return getRuleContexts(EnameContext.class);
		}
		public EnameContext ename(int i) {
			return getRuleContext(EnameContext.class,i);
		}
		public FunappdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funappdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterFunappdecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitFunappdecl(this);
		}
	}

	public final FunappdeclContext funappdecl() throws RecognitionException {
		FunappdeclContext _localctx = new FunappdeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funappdecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((FunappdeclContext)_localctx).d =  null; String n = null; String arg = null; String res = null; 
			setState(124); ((FunappdeclContext)_localctx).ename = ename();
			 n = ((FunappdeclContext)_localctx).ename.n; 
			setState(126); match(9);
			setState(127); ((FunappdeclContext)_localctx).ename = ename();
			 arg = ((FunappdeclContext)_localctx).ename.n; 
			setState(129); match(3);
			setState(130); match(16);
			setState(131); match(2);
			setState(132); ((FunappdeclContext)_localctx).ename = ename();
			 res = ((FunappdeclContext)_localctx).ename.n; 
			 ((FunappdeclContext)_localctx).d =  new FunAppDecl(n, arg, res); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnameContext extends ParserRuleContext {
		public String n;
		public IdContext id;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public EnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterEname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitEname(this);
		}
	}

	public final EnameContext ename() throws RecognitionException {
		EnameContext _localctx = new EnameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); ((EnameContext)_localctx).id = id();
			 ((EnameContext)_localctx).n =  (((EnameContext)_localctx).id!=null?_input.getText(((EnameContext)_localctx).id.start,((EnameContext)_localctx).id.stop):null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RnameContext extends ParserRuleContext {
		public String n;
		public Token ID;
		public TerminalNode ID() { return getToken(MegaLParser.ID, 0); }
		public RnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterRname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitRname(this);
		}
	}

	public final RnameContext rname() throws RecognitionException {
		RnameContext _localctx = new RnameContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_rname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); ((RnameContext)_localctx).ID = match(ID);
			 ((RnameContext)_localctx).n =  (((RnameContext)_localctx).ID!=null?((RnameContext)_localctx).ID.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID(int i) {
			return getToken(MegaLParser.ID, i);
		}
		public List<TerminalNode> ID() { return getTokens(MegaLParser.ID); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitId(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_id);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(ID);
			setState(145);
			_la = _input.LA(1);
			if (_la==5) {
				{
				setState(143); match(5);
				setState(144); match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtypenameContext extends ParserRuleContext {
		public String n;
		public IdContext id;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public EtypenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etypename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterEtypename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitEtypename(this);
		}
	}

	public final EtypenameContext etypename() throws RecognitionException {
		EtypenameContext _localctx = new EtypenameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_etypename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); ((EtypenameContext)_localctx).id = id();
			 ((EtypenameContext)_localctx).n =  (((EtypenameContext)_localctx).id!=null?_input.getText(((EtypenameContext)_localctx).id.start,((EtypenameContext)_localctx).id.stop):null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UqrefContext extends ParserRuleContext {
		public String s;
		public Token STRING;
		public TerminalNode STRING() { return getToken(MegaLParser.STRING, 0); }
		public UqrefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_uqref; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterUqref(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitUqref(this);
		}
	}

	public final UqrefContext uqref() throws RecognitionException {
		UqrefContext _localctx = new UqrefContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_uqref);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((UqrefContext)_localctx).s =  null; 
			setState(155);
			_la = _input.LA(1);
			if (_la==7) {
				{
				setState(151); match(7);
				setState(152); ((UqrefContext)_localctx).STRING = match(STRING);
				 ((UqrefContext)_localctx).s =  (((UqrefContext)_localctx).STRING!=null?((UqrefContext)_localctx).STRING.getText():null).substring(1,(((UqrefContext)_localctx).STRING!=null?((UqrefContext)_localctx).STRING.getText():null).length()-2); 
				setState(154); match(1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParentContext extends ParserRuleContext {
		public String n;
		public EnameContext ename;
		public EnameContext ename() {
			return getRuleContext(EnameContext.class,0);
		}
		public ParentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterParent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitParent(this);
		}
	}

	public final ParentContext parent() throws RecognitionException {
		ParentContext _localctx = new ParentContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_parent);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ParentContext)_localctx).n =  null; 
			setState(162);
			_la = _input.LA(1);
			if (_la==11) {
				{
				setState(158); match(11);
				setState(159); ((ParentContext)_localctx).ename = ename();
				 ((ParentContext)_localctx).n =  ((ParentContext)_localctx).ename.n; 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EtypedeclContext extends ParserRuleContext {
		public ETypeDecl d;
		public EtypenameContext name;
		public EtypenameContext supertype;
		public EtypenameContext etypename(int i) {
			return getRuleContext(EtypenameContext.class,i);
		}
		public List<EtypenameContext> etypename() {
			return getRuleContexts(EtypenameContext.class);
		}
		public EtypedeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etypedecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).enterEtypedecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MegaLListener ) ((MegaLListener)listener).exitEtypedecl(this);
		}
	}
